# yandex_backend

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
app/: config.py  exceptions.py  main.py
app/api/routes/: api.py  delete_route.py  import_route.py  log_route.py  node_statistic_route.py  nodes_route.py  post_route.py  sales_route.py
app/core/: engine.py  models.py  utils.py
app/schemas/: output_schemas.py  response.py  shop_item.py  statistic.py  utils.py
db/: entrypoint_postgres.sh
tests/: assets.py  conftest.py  unit_test.py  utils.py
tests/app/routes/: test_delete_route.py  test_import_route.py  test_node_statistic_route.py  test_nodes_route.py  test_sales_route.py
tests/test_assets/: expected_sales.py  expected_tree_assets.py
tests/test_assets/statistic/: expected_statistic_category_assets.py  expected_statistic_offer_assets.py
