[tool.poetry]
name = "apiservice"
version = "0.1.0"
description = "api service for yandex mega market"
authors = ["aptmess <improfeo@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.78.0"
uvicorn = "0.17.6"
loguru = "0.6.0"
SQLAlchemy = "1.4.36"
SQLAlchemy-Utils = "0.38.2"
psycopg2-binary = "2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^3.0.0"
isort = "^5.10.0"
black = "^22.1"
unify = "^0.5"
flake8 = "^4.0"
pylint = "^2.12.1"
mypy = "^0.940"
autoflake = "^1.4"
pytest-dependency = "0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
